[package]
name = "firebase-rs"
edition = "2021"
version = "2.0.9"
description = "Rust based Firebase library"
readme = "README.md"
repository = "https://github.com/emreyalvac/firebase-rs"
documentation = "https://docs.rs/firebase-rs/2.0.9/firebase_rs/"
license = "MIT"
authors = ["Emre YALVAÇ <emre.yalvac@outlook.com>"]
exclude = ["examples/*", "tests/*"]
keywords = ["firebase", "rest", "api", "web", "database"]

[dependencies]
anyhow = "1.0"
tracing = { version = "0.1", features = ["attributes"] }
url = "2.4"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
itertools = "0.11.0"
eventsource-client = "0.11"
futures-util = "0.3"
gcp_auth = "0.9"
reqwest-retry = "0.3"
reqwest-middleware = "0.2"

tokio = { version = "1.33", features = ["full"] }
